--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -2,27 +2,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.navWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    @media (min-width: 768px) {
-        width: 750px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    @media (min-width: 992px) {
-        width: 970px;
-    }
-
-    @media (min-width: 1200px) {
-        width: 1170px;
-    }
-}
-
 .top {
     color: black;
     background: none;
@@ -100,7 +79,7 @@
         display: none;
     }
 
-    @media (min-width: 992px) {
+    @media (min-width: 900px) {
         display: block;
     }
 }
@@ -111,7 +90,7 @@
     border-radius: 50%;
     object-fit: cover;
 
-    @media (min-width: 768px) {
+    @media (min-width: 600px) {
         height: 85px;
         width: 85px;
     }
@@ -145,7 +124,7 @@
     color: black;
     border-radius: 10%;
 
-    @media (min-width: 992px) {
+    @media (min-width: 900px) {
         display: none;
     }
 }
@@ -156,11 +135,16 @@
     height: 40px;
     padding: 10px 20px;
     background-color: white;
-    border: dashed 0.5px lightblue;
+    border: dashed 0.5px #2f6b4f;
     border-radius: 45px;
     font-size: 14px;
 
-    @media (min-width: 992px) {
+    @media (min-width: 900px) {
         display: flex;
     }
+}
+
+.link {
+    color: inherit;
+    text-decoration: none;
 }
