--- a/client/src/components/comments/comments.css
+++ b/client/src/components/comments/comments.css
@@ -60,7 +60,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.submitButton {
+.commentButton {
     background-color: #2f6b4f;
     color: white;
     border: none;
