--- a/client/src/components/service-post/servicepost.css
+++ b/client/src/components/service-post/servicepost.css
@@ -1,12 +1,16 @@
 .servicePostContainer {
     position: relative;
     text-align: center;
+    margin: 5px;
+    border: 0.5px solid lightgray;
+    overflow: hidden;
 }
 
 .servicePostImage {
     width: 100%;
-    height: 220px;
+    height: 280px;
     object-fit: cover;
+    transition: all 0.25s ease;
 }
 
 .servicePostTitle {
@@ -14,10 +18,22 @@
     width: 100%;
     margin: 0;
     padding: 12px 0;
-    bottom: 5px;
+    bottom: 0;
     font-size: 14px;
     font-weight: bold;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     font-family: 'Roboto', sans-serif;
+    transition: all 0.25s ease;
 }
+
+.servicePostContainer:hover > .servicePostImage {
+    transform: scale(1.1);
+}
+
+.servicePostContainer:hover > .servicePostTitle {
+    color: whitesmoke;
+    padding: 14px 0;
+    background-color: #387e5d;
+}
+
