--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,3 +1,62 @@
 .homeContainer {
-    margin-top: 150px;
+    margin-top: 115px;
+}
+
+.mainTitle {
+    font-size: 24px;
+    font-weight: 450;
+    text-align: center;
+    color: #2f6b4f;
+    margin-bottom: 30px;
+}
+
+.box {
+    padding: 20px 0;
+}
+
+.alterBox {
+    background-color: whitesmoke;
+    padding: 20px 0;
+}
+
+.aboutTab {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.aboutMainTitle {
+    font-size: 24px;
+    font-weight: 450;
+    color: #2f6b4f;
+    margin-bottom: 30px;
+}
+
+.aboutImage {
+    width: 100%;
+    height: 500px;
+    object-fit: contain;
+}
+
+.aboutIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 10px;
+    background-color: #2f6b4f;
+    color: white;
+    margin: 0 30px;
+}
+
+.aboutTitle {
+    font-size: 16px;
+    font-weight: 450;
+    color: #2f6b4f;
+    margin: 0;
+}
+
+.aboutContent {
+    font-size: 14px;
+    line-height: 22px;
 }
