Basic JWT + Markdown

--- a/client/src/components/comments/comments.css
+++ b/client/src/components/comments/comments.css
@@ -57,7 +57,7 @@
 }
 
 .commentButton {
-    background-color: #2f6b4f;
+    background-color: #0f3e3c;
     color: white;
     border: none;
     padding: 10px;
