--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -131,7 +131,7 @@
     height: 40px;
     padding: 10px 20px;
     background-color: white;
-    border: dashed 0.5px #2f6b4f;
+    border: dashed 0.5px #0f3e3c;
     border-radius: 45px;
     font-size: 14px;
     cursor: pointer;
