--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -40,7 +40,7 @@
 }
 
 .readmoreButton {
-    background-color: #2f6b4f;
+    background-color: #0f3e3c;
     color: white;
     border: none;
     padding: 10px;
