--- a/client/src/components/post-content/postcontent.css
+++ b/client/src/components/post-content/postcontent.css
@@ -52,8 +52,8 @@
 }
 
 .postContentMarkdown {
-    font-size: 18px;
-    line-height: 25px;
+    /* font-size: 18px; */
+    /* line-height: 25px; */
 }
 
 .authorInfo {
