--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,7 +6,7 @@
     font-size: 24px;
     font-weight: 450;
     text-align: center;
-    color: #2f6b4f;
+    color: #0f3e3c;
     margin-bottom: 30px;
 }
 
@@ -28,7 +28,7 @@
 .aboutMainTitle {
     font-size: 24px;
     font-weight: 450;
-    color: #2f6b4f;
+    color: #0f3e3c;
     margin-bottom: 30px;
 }
 
@@ -44,7 +44,7 @@
     justify-content: center;
     border-radius: 50%;
     padding: 10px;
-    background-color: #2f6b4f;
+    background-color: #0f3e3c;
     color: white;
     margin: 0 30px;
 }
@@ -52,11 +52,48 @@
 .aboutTitle {
     font-size: 16px;
     font-weight: 450;
-    color: #2f6b4f;
+    color: #0f3e3c;
     margin: 0;
 }
 
 .aboutContent {
     font-size: 14px;
     line-height: 22px;
+    text-align: justify;
+}
+
+.contactTab {
+    width: 100%;
+    height: 235px;
+    background-color: #0f3e3c;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(http://khangnguyenweddinghouse.com/wp-content/uploads/2022/09/Rectangle-39.png?id=181) !important;
+    background-size: cover;
+}
+
+.contactTitle {
+    color: white;
+    font-size: 32px;
+    font-weight: 450;
+}
+
+.contactButton {
+    background-color: #0f3e3c;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin: 20px 10px 20px 0;
+    width: 150px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contactButton:hover {
+    background-color: #387e5d;
 }
