--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -27,7 +27,7 @@
 }
 
 .loginButton {
-    background-color: #2f6b4f;
+    background-color: #0f3e3c;
     color: white;
     border: none;
     padding: 15px 10px;
