--- a/client/src/pages/edit-post/editpost.css
+++ b/client/src/pages/edit-post/editpost.css
@@ -1,8 +1,8 @@
-.newPostContainer {
+.editPostContainer {
     margin-top: 150px;
 }
 
-.newPostTitle {
+.editPostTitle {
     font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
@@ -24,13 +24,14 @@
     cursor: pointer;
 }
 
-.newPostContent {
+.editPostContent {
     background-color: white;
     outline: none;
     border-radius: 0;
     color: black;
     padding: 10px;
     font-size: 16px;
+    margin-bottom: 15px;
 }
 
 .submitButton {
@@ -41,6 +42,9 @@
     margin: 20px 10px 20px 0;
     width: 150px;
     font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     cursor: pointer;
 }
 
