--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -85,11 +85,18 @@
     width: 60px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
+    transition: ease-in-out all 0.25s;
 
     @media (min-width: 600px) {
         height: 85px;
         width: 85px;
     }
+}
+
+.logoImage:hover {
+    filter: drop-shadow(1px 1px 5px #0d3c3985);
+    transform: rotate(4deg);
 }
 
 .tabList {
@@ -103,11 +110,21 @@
 
 .tab {
     color: black;
-    margin-left: 15px;
-    margin-right: 15px;
     font-size: 17px;
     font-weight: 350;
     cursor: pointer;
+    text-transform: uppercase;
+    padding: 10px 15px;
+    border-left: 0.5px solid transparent;
+    border-right: 0.5px solid transparent;
+    transition: ease-in-out all 0.1s;
+}
+
+.tab:hover {
+    color: #387e5d;
+    background-color: whitesmoke;
+    font-weight: 400;
+    border-color: lightgray;
 }
 
 .drawerButton {
@@ -150,4 +167,10 @@
 .link {
     color: inherit;
     text-decoration: none;
+}
+
+.link.active {
+    font-weight: 400;
+    color: #0f3e3c;
+    text-decoration: underline;
 }
