--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -1,4 +1,4 @@
-.cateContainer {
+.aboutContainer {
     margin-top: 150px;
 }
 
@@ -7,4 +7,10 @@
     font-weight: 450;
     color: #0f3e3c;
     margin-bottom: 30px;
+}
+
+.aboutMarkdown {
+    text-align: justify;
+    line-height: 26px;
+    margin-bottom: 50px;
 }
