--- a/client/src/pages/new-post/newpost.css
+++ b/client/src/pages/new-post/newpost.css
@@ -56,10 +56,7 @@
     align-items: center;
     justify-content: space-around;
     cursor: pointer;
-}
-
-.submitButton:hover {
-    background-color: #387e5d;
+    position: relative;
 }
 
 .submitButton:hover {
@@ -78,4 +75,9 @@
     border: 1px solid lightsteelblue;
     padding: 10px;
     margin-bottom: 15px;
+}
+
+.errorMsg {
+    color: #f25a5a;
+    margin-top: 0;
 }
