--- a/client/src/pages/edit-post/editpost.css
+++ b/client/src/pages/edit-post/editpost.css
@@ -46,10 +46,10 @@
 }
 
 .removeButton:hover {
-    color: red;
-    border-color: red;
+    color: #f16d6d;
+    border-color: #f16d6d;
     border-style: solid;
-    background-color: whitesmoke;
+    background-color: rgb(243, 198, 198, 0.3);
 }
 
 .editPostContent {
@@ -68,17 +68,12 @@
     border: none;
     padding: 10px;
     margin: 20px 10px 20px 0;
-    width: 150px;
     font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     cursor: pointer;
     position: relative;
-}
-
-.submitButton:hover {
-    background-color: #387e5d;
 }
 
 .submitButton:hover {
