--- a/client/src/components/comment/comment.css
+++ b/client/src/components/comment/comment.css
@@ -13,3 +13,28 @@
     border-bottom: dashed 0.5px lightgray;
     text-align: justify;
 }
+
+.deleteButton {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    height: 35px;
+    border-radius: 40px;
+    border: dashed 1px #f25a5a;
+    color: #f25a5a;
+    background-color: white;
+    cursor: pointer;
+    position: relative;
+}
+
+.deleteButton:hover {
+    border-color: lightblue;
+    border-style: solid;
+    background-color: whitesmoke;
+}
+
+.deleteButton:disabled {
+    border-color: gray;
+    background-color: lightgray;
+    color: gray;
+}
