--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -70,14 +70,6 @@
 
 .bottomRight {
     display: block;
-    
-    @media (min-width: 768px) {
-        display: none;
-    }
-
-    @media (min-width: 900px) {
-        display: block;
-    }
 }
 
 .logoImage {
@@ -88,7 +80,7 @@
     cursor: pointer;
     transition: ease-in-out all 0.25s;
 
-    @media (min-width: 600px) {
+    @media (min-width: 768px) {
         height: 85px;
         width: 85px;
     }
@@ -106,18 +98,25 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    overflow-x: scroll;
 }
 
 .tab {
     color: black;
-    font-size: 17px;
+    font-size: 14px;
+    padding: 10px;
     font-weight: 350;
+    white-space: nowrap;
     cursor: pointer;
     text-transform: uppercase;
-    padding: 10px 15px;
     border-left: 0.5px solid transparent;
     border-right: 0.5px solid transparent;
     transition: ease-in-out all 0.1s;
+
+    @media (min-width: 900px) {
+        font-size: 17px;
+        padding: 10px 15px;
+    }
 }
 
 .tab:hover {
@@ -137,7 +136,7 @@
     color: black;
     border-radius: 10%;
 
-    @media (min-width: 900px) {
+    @media (min-width: 768px) {
         display: none;
     }
 }
@@ -148,16 +147,24 @@
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     height: 40px;
-    padding: 10px 20px;
+    padding: 10px 15px;
     background-color: white;
     border: dashed 0.5px #0f3e3c;
     border-radius: 45px;
     font-size: 14px;
     cursor: pointer;
 
-    @media (min-width: 900px) {
+    @media (min-width: 768px) {
         display: flex;
     }
+}
+
+.signUpButton p {
+    margin: 0;
+    max-width: 10ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .signUpButton:hover {
