--- a/client/src/components/post-content/postcontent.css
+++ b/client/src/components/post-content/postcontent.css
@@ -3,13 +3,9 @@ a {
     color: inherit;
 }
 
-.postContentContainer p {
-    display: flex;
-    justify-content: center;
-}
-
-.postContentContainer img {
+.postContentContainer p img {
     width: 80%;
+    margin-left: 10%;
     height: auto;
     object-fit: cover;
 }
@@ -30,6 +26,17 @@ a {
     padding: 12px 0px;
 }
 
+.leftInfo {
+    display: flex;
+    align-items: center;
+}
+
+.rightInfo {
+    display: flex;
+    align-items: center;
+    padding: 5px 0px;
+}
+
 .info {
     display: flex;
     align-items: center;
@@ -43,7 +50,6 @@ a {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     padding: 0 15px;
-    margin-left: 15px;
     height: 35px;
     border-radius: 40px;
     background-color: white;
