--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -5,7 +5,8 @@
 .postThumbnail {
     max-width: 350px;
     width: 95%;
-    height: auto;
+    height: 95%;
+    object-fit: cover;
     padding: 5px;
     border: 0.5px solid lightblue;
 }
