--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,5 +1,10 @@
-.imagesContainer {
+.profileContainer {
     margin-top: 150px;
+}
+
+.profileWrapper {
+    padding: 20px;
+    margin-bottom: 50px;
 }
 
 .alternativeTitle {
@@ -9,51 +14,45 @@
     margin-bottom: 30px;
 }
 
-.deleteImageButton {
-    color: #f25a5a;
-}
-
-.deleteImageButton:hover {
-    color: #f16d6d;
-}
-
-.deleteImageButton:disabled {
-    color: gray;
-}
-
-.addButton {
+.infoButton {
     display: flex;
     align-items: center;
-    padding: 0 15px;
-    margin-left: 15px;
-    height: 35px;
-    border-radius: 40px;
-    border: dashed 1px;
-    position: relative;
-    cursor: pointer;
-    background-color: white;
-    color: #0f3e3c;
-    border-color: #0f3e3c;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
+    padding: 0 15px;
+    height: 35px;
+    border-radius: 40px;
+    background-color: white;
+    border: dashed 1px;
+    cursor: pointer;
+    position: relative;
 }
 
-.addButton:hover {
-    color: #387e5d;
-    border-color: #387e5d;
+.infoButton:hover {
+    border-color: lightblue;
     border-style: solid;
     background-color: whitesmoke;
 }
 
-.addButton:disabled {
+.infoButton:disabled {
     border-color: gray!important;
     color: gray!important;
     border-style: dotted;
     background-color: whitesmoke;
 }
 
+.profileInfoStack {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
 .errorMsg {
     color: #f25a5a;
     margin-top: 0;
-    white-space: pre-line;
+}
+
+.successMsg {
+    color: #4fc54b;
+    margin-top: 0;
 }
