--- a/client/src/components/comments/comments.css
+++ b/client/src/components/comments/comments.css
@@ -87,6 +87,7 @@
     color: #0f3e3c;
     text-align: center;
     width: 100%;
+    font-size: 16px;
     font-weight: bold;
     cursor: pointer;
     border: none;
