--- a/client/src/components/post-content/postcontent.css
+++ b/client/src/components/post-content/postcontent.css
@@ -106,6 +106,11 @@ a {
     transition: all ease-in-out 0.1s;
 }
 
+.authorInfo figcaption {
+    display: flex;
+    align-items: center;
+}
+
 .authorInfo figcaption:hover {
     color: lightblue;
     text-decoration: underline;
