--- a/client/src/components/service-post/servicepost.css
+++ b/client/src/components/service-post/servicepost.css
@@ -15,6 +15,8 @@
 
 .servicePostTitle {
     position: absolute;
+    display: flex;
+    justify-content: center;
     width: 100%;
     margin: 0;
     padding: 12px 0;
