--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,3 +51,17 @@ body {
     background-color: #3d4944;
     color: gray;
 }
+
+.option {
+    color: #0f3e3c;
+}
+
+.option:hover {
+    color: #387e5d;
+    text-decoration: underline;
+}
+
+.errorMsg {
+    color: #f25a5a;
+    margin-top: 0;
+}
