--- a/client/src/pages/images/images.css
+++ b/client/src/pages/images/images.css
@@ -2,6 +2,17 @@
     margin-top: 150px;
 }
 
+.imagesContainer img {
+    min-height: 200px;
+    cursor: pointer;
+    background-color: whitesmoke;
+}
+
+.imageEnlarge {
+    width: 100%;
+    object-fit: cover;
+}
+
 .alternativeTitle {
     font-size: 24px;
     font-weight: 450;
