Infinite scroll images list + Prefetching - Fixed pagination - Tweaked load more comments

--- a/client/src/components/post-content/postcontent.css
+++ b/client/src/components/post-content/postcontent.css
@@ -78,7 +78,7 @@ a {
 
 .postContentThumbnail {
     width: 90%!important;
-    min-height: 20vh;
+    height: 90%!important;
     object-fit: cover;
     border: 1px solid lightsteelblue;
     padding: 10px;
