+ Enabled gzip compression + Removed redundant response infos + Fixed image url were not match the server current url + Fixed responsive layout with duct tapes + Added some code splitting

--- a/client/src/components/banner-slider/bannerslider.css
+++ b/client/src/components/banner-slider/bannerslider.css
@@ -1,12 +1,12 @@
 .bannerSliderContainer {
     box-shadow: 6px 6px 10px hsl(206.5, 0%, 75%);
     border-bottom: 0.5px lightblue solid;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .bannerImage {
     max-height: 50%;
-    height: 100%;
     width: 100%;
+    aspect-ratio: 55/19;
     object-fit: cover;
 }
