--- a/client/src/pages/manage/manage.css
+++ b/client/src/pages/manage/manage.css
@@ -1,6 +1,10 @@
 .manageContainer {
-    margin-top: 150px;
     margin-bottom: 50px;
+    margin-top: 16px;
+
+    @media (min-width: 768px) {
+        margin-top: 24px;
+    }
 }
 
 .alternativeTitle {
