--- a/client/src/pages/video/video.css
+++ b/client/src/pages/video/video.css
@@ -1,5 +1,9 @@
 .videoContainer {
-    margin-top: 150px;
+    margin-top: 16px;
+
+    @media (min-width: 768px) {
+        margin-top: 24px;
+    }
 }
 
 .alternativeTitle {
