--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .top {
+    position: relative;
     color: black;
     background: none;
     background-color: transparent;
@@ -6,6 +7,7 @@
     display: flex;
     align-items: center;
     padding: 5px;
+    z-index: 1101;
 }
 
 .topLeft {
@@ -57,7 +59,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0;
+
+    @media (min-width: 768px) {
+        padding: 0 20px;
+    }
 }
 
 .bottomCenter {
@@ -73,16 +79,20 @@
 }
 
 .logoImage {
-    height: 60px;
-    width: 60px;
+    height: 54px;
+    width: 54x;
+    aspect-ratio: 1/1;
+    padding: 3px 0;
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
     transition: ease-in-out all 0.25s;
 
     @media (min-width: 768px) {
-        height: 85px;
-        width: 85px;
+        height: 75px;
+        width: 75px;
+        padding: 0;
+        margin-left: 10px;
     }
 }
 
