--- a/client/src/pages/edit-post/editpost.css
+++ b/client/src/pages/edit-post/editpost.css
@@ -1,5 +1,9 @@
 .editPostContainer {
-    margin-top: 150px;
+    margin-top: 16px;
+
+    @media (min-width: 768px) {
+        margin-top: 24px;
+    }
 }
 
 .editPostTitle {
