--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,7 +1,3 @@
-.homeContainer {
-    margin-top: 115px;
-}
-
 .mainTitle {
     font-size: 24px;
     font-weight: 450;
@@ -12,6 +8,10 @@
 
 .box {
     padding: 20px 0;
+
+    @media (max-width: 768px) {
+        padding: 0;
+    }
 }
 
 .alterBox {
@@ -81,6 +81,10 @@
     text-align: center;
     margin-left: 20px;
     margin-right: 20px;
+
+    @media (max-width: 768px) {
+        font-size: 24px;
+    }
 }
 
 .contactButton {
