--- a/client/src/pages/new-post/newpost.css
+++ b/client/src/pages/new-post/newpost.css
@@ -1,5 +1,9 @@
 .newPostContainer {
-    margin-top: 150px;
+    margin-top: 16px;
+
+    @media (min-width: 768px) {
+        margin-top: 24px;
+    }
 }
 
 .newPostTitle {
