--- a/client/src/pages/post-detail/postdetail.css
+++ b/client/src/pages/post-detail/postdetail.css
@@ -1,3 +1,7 @@
 .postDetailContainer {
-    margin-top: 150px;
+    margin-top: 16px;
+
+    @media (min-width: 768px) {
+        margin-top: 24px;
+    }
 }
