--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -2,13 +2,13 @@
     background-image: url('../../assets/wallpaper.jpg');
     background-size: cover;
     background-position: center;
-    margin: 100px auto 0 auto;
-    height: 90vh;
+    height: 110vh;
     display: flex;
     align-items: center;
 }
 
 .register {
+    margin: 20px 0;
     width: 500px;
     display: flex;
     justify-content: center;
@@ -30,6 +30,10 @@
     font-size: 22px;
     font-weight: 450;
     color: #333333;
+
+    @media (max-width: 768px) {
+        margin: 4px 0;
+    }
 }
 
 .registerButton {
